CA3/ca3/output.txt
Q1. mastermind output

H:\python\ca3\final>mastermind.py
How many digits would you like to guess?
==> 2
You have 10 guesses!

what is your guess? 01
Your guess has 0 digits in the correct position and 0 out of position
what is your guess? 23
Your guess has 0 digits in the correct position and 0 out of position
what is your guess? 45
Your guess has 0 digits in the correct position and 0 out of position
what is your guess? 67
Your guess has 1 digits in the correct position and 0 out of position
what is your guess? 68
Your guess has 0 digits in the correct position and 0 out of position
what is your guess? 97
Congratulations, you won in 6 turns, with 4 turns to spare.

H:\python\ca3\final>mastermind.py
How many digits would you like to guess?
==> 3
You have 10 guesses!

what is your guess? 012
Your guess has 0 digits in the correct position and 1 out of position
what is your guess? 234
Your guess has 1 digits in the correct position and 1 out of position
what is your guess? 243
Your guess has 2 digits in the correct position and 0 out of position
what is your guess? 245
Your guess has 1 digits in the correct position and 0 out of position
what is your guess? 263
Your guess has 2 digits in the correct position and 0 out of position
what is your guess? 273
Your guess has 2 digits in the correct position and 0 out of position
what is your guess? 283
Your guess has 2 digits in the correct position and 0 out of position
what is your guess? 293
Congratulations, you won in 8 turns, with 2 turns to spare.

H:\python\ca3\final>mastermind.py
How many digits would you like to guess?
==> 5
You have 10 guesses!

what is your guess? 012345
Invalid input
what is your guess? 01234
Your guess has 0 digits in the correct position and 3 out of position
what is your guess? 23456
Your guess has 0 digits in the correct position and 3 out of position
what is your guess? I am never going to win this
Invalid input
what is your guess? 11111
Your guess has 0 digits in the correct position and 0 out of position
what is your guess? 00000
Your guess has 0 digits in the correct position and 1 out of position
what is your guess?
Invalid input
what is your guess? 34567
Your guess has 1 digits in the correct position and 3 out of position
what is your guess? 35670
Your guess has 0 digits in the correct position and 4 out of position
what is your guess? 23452
Your guess has 0 digits in the correct position and 2 out of position
what is your guess? 09876
Your guess has 0 digits in the correct position and 3 out of position
what is your guess? 65432
Your guess has 0 digits in the correct position and 3 out of position
what is your guess? 12345
Your guess has 1 digits in the correct position and 1 out of position
You have run out of guesses!
The secret number was 46307

Q2. invert output

H:\python\ca3\final>invert.py
original: {'a': 1, 'c': 3, 'b': 2}
inverted: {3: 'c', 1: 'a', 2: 'b'}
double invert: {'a': 1, 'b': 2, 'c': 3}

minvert output

H:\python\ca3\final>minvert.py
original: {'a': 1, 'c': 3, 'b': 2}
inverted: {3: ['c'], 1: ['a'], 2: ['b']}
original: {'a': 21, 'c': 21, 'b': 'a', 'e': 56, 'd': 56, 'f': [26, 27]}
inverted: {'a': ['b'], 21: ['a', 'c'], 56: ['e', 'd'], 26: ['f'], 27: ['f']}
inverted twice: {'a': [21], 'c': [21], 'b': ['a'], 'e': [56], 'd': [56], 'f': [26, 27]}

Q4 sets output

H:\python\ca3>sets.py
[[], ['epsilon'], ['delta'], ['epsilon', 'delta'], ['gamma'], ['epsilon', 'gamma
'], ['delta', 'gamma'], ['epsilon', 'delta', 'gamma'], ['beta'], ['epsilon', 'be
ta'], ['delta', 'beta'], ['epsilon', 'delta', 'beta'], ['gamma', 'beta'], ['epsi
lon', 'gamma', 'beta'], ['delta', 'gamma', 'beta'], ['epsilon', 'delta', 'gamma'
, 'beta'], ['alpha'], ['epsilon', 'alpha'], ['delta', 'alpha'], ['epsilon', 'del
ta', 'alpha'], ['gamma', 'alpha'], ['epsilon', 'gamma', 'alpha'], ['delta', 'gam
ma', 'alpha'], ['epsilon', 'delta', 'gamma', 'alpha'], ['beta', 'alpha'], ['epsi
lon', 'beta', 'alpha'], ['delta', 'beta', 'alpha'], ['epsilon', 'delta', 'beta',
 'alpha'], ['gamma', 'beta', 'alpha'], ['epsilon', 'gamma', 'beta', 'alpha'], ['
delta', 'gamma', 'beta', 'alpha'], ['epsilon', 'delta', 'gamma', 'beta', 'alpha'
]]
[1, 2, 3, 4] [1, 2, 3, 4]
[1, 2, 2, 3] [1, 2, 3]
[5] [5]
[] []
['alpha', 'beta', 'gamma', 'delta', 'epsilon'] [[], ['epsilon'], ['delta'], ['ep
silon', 'delta'], ['gamma'], ['epsilon', 'gamma'], ['delta', 'gamma'], ['epsilon
', 'delta', 'gamma'], ['beta'], ['epsilon', 'beta'], ['delta', 'beta'], ['epsilo
n', 'delta', 'beta'], ['gamma', 'beta'], ['epsilon', 'gamma', 'beta'], ['delta',
 'gamma', 'beta'], ['epsilon', 'delta', 'gamma', 'beta'], ['alpha'], ['epsilon',
 'alpha'], ['delta', 'alpha'], ['epsilon', 'delta', 'alpha'], ['gamma', 'alpha']
, ['epsilon', 'gamma', 'alpha'], ['delta', 'gamma', 'alpha'], ['epsilon', 'delta
', 'gamma', 'alpha'], ['beta', 'alpha'], ['epsilon', 'beta', 'alpha'], ['delta',
 'beta', 'alpha'], ['epsilon', 'delta', 'beta', 'alpha'], ['gamma', 'beta', 'alp
ha'], ['epsilon', 'gamma', 'beta', 'alpha'], ['delta', 'gamma', 'beta', 'alpha']
, ['epsilon', 'delta', 'gamma', 'beta', 'alpha']]

H:\python\ca3>sets.py
  File "H:\python\ca3\sets.py", line 48
    print "set difference of", A, "and", B, ":" difference(A, B)
                                                         ^
SyntaxError: invalid syntax

H:\python\ca3>sets.py
[1, 2, 3, 4] [1, 2, 3, 4]
[1, 2, 2, 3] [1, 2, 3]
[5] [5]
[] []
union of [1, 2, 3, 4] and [3, 4, 5, 6] : [1, 2, 3, 4, 5, 6]
intersection of [1, 2, 3, 4] and [3, 4, 5, 6] ; [3, 4]
removal of 2 from [1, 2, 3, 4] :
Traceback (most recent call last):
  File "H:\python\ca3\sets.py", line 79, in <module>
    test([1,2,3,4], [3,4,5,6], 2)
  File "H:\python\ca3\sets.py", line 47, in test
    print "removal of", e, "from", A, ":", remove(A, e)
  File "H:\python\ca3\sets.py", line 32, in remove
    del A[A.index[e]]           #or remove A[e]
TypeError: 'builtin_function_or_method' object has no attribute '__getitem__'

H:\python\ca3>
H:\python\ca3>sets.py
  File "H:\python\ca3\sets.py", line 32
    remove A[e]#del A[A.index[e]]               #or remove A[e]
           ^
SyntaxError: invalid syntax

H:\python\ca3>sets.py
[1, 2, 3, 4] [1, 2, 3, 4]
[1, 2, 2, 3] [1, 2, 3]
[5] [5]
[] []
union of [1, 2, 3, 4] and [3, 4, 5, 6] : [1, 2, 3, 4, 5, 6]
intersection of [1, 2, 3, 4] and [3, 4, 5, 6] ; [3, 4]
removal of 2 from [1, 2, 3, 4] : [1, 3, 4]
set difference of [1, 3, 4] and [3, 4, 5, 6] : [1]
['alpha', 'beta', 'gamma', 'delta', 'epsilon'] [[], ['epsilon'], ['delta'], ['ep
silon', 'delta'], ['gamma'], ['epsilon', 'gamma'], ['delta', 'gamma'], ['epsilon
', 'delta', 'gamma'], ['beta'], ['epsilon', 'beta'], ['delta', 'beta'], ['epsilo
n', 'delta', 'beta'], ['gamma', 'beta'], ['epsilon', 'gamma', 'beta'], ['delta',
 'gamma', 'beta'], ['epsilon', 'delta', 'gamma', 'beta'], ['alpha'], ['epsilon',
 'alpha'], ['delta', 'alpha'], ['epsilon', 'delta', 'alpha'], ['gamma', 'alpha']
, ['epsilon', 'gamma', 'alpha'], ['delta', 'gamma', 'alpha'], ['epsilon', 'delta
', 'gamma', 'alpha'], ['beta', 'alpha'], ['epsilon', 'beta', 'alpha'], ['delta',
 'beta', 'alpha'], ['epsilon', 'delta', 'beta', 'alpha'], ['gamma', 'beta', 'alp
ha'], ['epsilon', 'gamma', 'beta', 'alpha'], ['delta', 'gamma', 'beta', 'alpha']
, ['epsilon', 'delta', 'gamma', 'beta', 'alpha']]
